--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.datasource.username=postgres
 spring.datasource.password=iPostgreSQL96
+spring.datasource.hikari.maximum-pool-size=20
 spring.jpa.open-in-view=false
 spring.datasource.hikari.maxLifeTime=600000
 #Hanlde OPTIONS Requests
