--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.open-in-view=false
 spring.datasource.hikari.maxLifeTime=600000
 #Hanlde OPTIONS Requests
 spring.mvc.dispatch-trace-request=true
-server.servlet.context-path=/batch
+server.servlet.context-path=/v1/batch
 logging.level.org.springframework=fatal
 # File config
 spring.main.allow-circular-references=true
